--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
-          doxyfile-path: "./Doxyfie"
+          doxyfile-path: "./Doxyfile"
           working-directory: "."
           
       
