--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -22,14 +22,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
           doxyfile-path: "./Doxyfile"
-          working-directory: "./test"
+          working-directory: "./"
           
       
