--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "fucking-work-please" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -28,6 +28,3 @@ jobs:
         uses: mattnotmitt/doxygen-action@1.9.4
         with:
           doxyfile-path: "./Doxyfile"
-          working-directory: "."
-          
-      
