--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "functional": "cpp",
+        "numeric": "cpp"
     }
 }
