Double Free fixed

--- a/Code/makefile
+++ b/Code/makefile
@@ -1,14 +1,8 @@
 all: clear compile run clean
 
-gui: clear guiComp run clean
-
-guiComp:
-	g++ -c */*.cpp
-	g++ -o main *.o -LC:/dev/lib -lsfml-system -lsfml-window -lsfml-graphics -lsfml-audio -lsfml-network
-
 compile:
 	g++ -c */*.cpp
-	g++ -o main *.o -LC:/dev/lib -lsfml-system -lsfml-window -lsfml-graphics
+	g++ -o main *.o -LC:/dev/lib -lsfml-system -lsfml-window -lsfml-graphics -lsfml-audio -lsfml-network
 
 clean:
 	rm *.o
@@ -20,7 +14,7 @@ run:
 	./main
 
 mem: clear compile clean
-	 valgrind --leak-check=full --show-leak-kinds=all ./main
+	 valgrind --leak-check=yes ./main
 
 debug:
 	g++ -g */*.cpp
