--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,21 @@
     "tuple": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
-    "random": "cpp"
+    "random": "cpp",
+    "country": "cpp",
+    "atomic": "cpp",
+    "bit": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "ctime": "cpp",
+    "deque": "cpp",
+    "map": "cpp",
+    "algorithm": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "numeric": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
